# cpp-cross-platform-demo

./: CMakeLists.txt  README.md  version.rc.in
.github/workflows/: build.yml
include/: calculator.h
src/: calculator.cpp  main.cpp
